# Ants-beesClassifier

./: README.md  config.py  ersNasraOneDriveسطح المكتبproject AIAnts-beesClassifier  main.py  pyproject.toml  tatus --porcelain  test.py
notebooks/: EDA.ipynb  notes.ipynb
src/data/: __init__.py  prepare_data.py
src/feature-model/: model.py
src/models/: model.py  train.py
src/utils/: data_utils.py
