[project]
name = "aiproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "jupyter>=1.1.1",
    "opencv-python==4.10.0.84",

]
